--- a/style.css
+++ b/style.css
@@ -13,10 +13,9 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: #e5e5f7;
-    opacity: 1;
-    background-size: 18px 18px;
-    background-image:  repeating-linear-gradient(0deg, #444cf7, #444cf7 0.9px, #e5e5f7 0.9px, #e5e5f7);
+    width: 100%;
+  height: 100%;
+  background: radial-gradient(ellipse, orangered, transparent, orange) orange;
 }
 
 .container{
@@ -110,4 +109,10 @@ body{
     background: #5372F0;
     border-radius: 5px;
     font-size: 17px;
+}
+
+@media screen and (max-width: 600px) { 
+    .container{
+        width: 100%;
+    }
 }
